--- a/templates/profiles/neo_edit.html
+++ b/templates/profiles/neo_edit.html
@@ -9,11 +9,11 @@
 {% block styles %}
 {{ super() }}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/blueimp-gallery.min.css') }}">
-<link rel="stylesheet" href="{{ url_for('static', filename='css/neo.css') }}">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/4.0.1/min/dropzone.min.css" rel='stylesheet' type="text/css">
 <link href= "https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.7.0/spectrum.min.css" rel='stylesheet' type="text/css">
 <link href={{ url_for('static', filename='css/fontselect.css') }} rel='stylesheet' type="text/css">
-<link href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/4.0.1/min/basic.min.css" rel='stylesheet' type="text/css">
+<!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/4.0.1/min/basic.min.css" rel='stylesheet' type="text/css"> -->
+<link rel="stylesheet" href="{{ url_for('static', filename='css/neo.css') }}">
 <style>
 .panel-heading:hover {
   background-color : inherit;
@@ -119,6 +119,12 @@
 								{% endfor %}
 						</div>
 						{% endif %}
+						<div class="col-xs-12" style="text-align:center;">
+						<button id="btn_desc_tbl_add" type="button" class="btn btn-default">
+								<span class="glyphicon glyphicon-plus" aria=hidden="true"></span>
+								Add New Note
+						</button>
+						</div>
 						</p>
 				</div>
 				<div class="col-md-10 col-md-offset-1 content">
@@ -132,21 +138,9 @@
 										</div>
 								</div>
 								<div class="row">
-										{% for i in range(0, profile.description.tables.keys()|length) %}
-										<div id="description-{{i}}" class="description-panel {% if i != 0 %}hidden{% endif %}">
-												<div class="col-md-8 description-img-well">
-														{% if profile.description.get_tables()[i].get_image_links()[0] %}
-														<img class="img-description img-responsive centered" src="{{profile.description.get_tables()[i].get_image_links()[0]}}">
-														{% else %}
-														<img class="img-description img-responsive centered" src="{{url_for('static', filename='img/bkg.jpg')}}">
-														{% endif %}
-												</div>
-												<div class="col-md-4 fill-low-opacity">
-														<h3>{{ profile.description.get_keys()[i] }}</h3>
-														<p class="text-editable">{{ profile.description.get_tables()[i].get_text() }}</p>
-												</div>
+										<div id="description-content">
+										{{ neo.render_description_content(profile.description) }}
 										</div>
-										{% endfor %}
 								</div>
 								<div class="row">
 										<div class="col-xs-12 hr fill-low-opacity"></div>
@@ -160,13 +154,20 @@
 								</div>
 						</div> <!-- END container -->
 				</div> <!-- END col-xs-11 -->
-				<div class="col-xs-1" id="imglink_col imglink-container">
+				<div class="col-xs-1" id="imglink_col">
+						<div id="imglink-container">
 						{{ neo.render_editable_imglinks(profile.sidebar.img_links)}}
+						</div>
+						<div class="col-xs-12">
+								<li style="text-align:center;">
+								<button id="btn_sidebar_add_link" class="btn btn-default">
+										<span class="glyphicon glyphicon-plus" aria=hidden="true"></span>
+								</button>
+								</li>
+						</div>
 				</div>
 		</div> <!-- END row -->
 </div> <!-- END container -->
-
-{% endblock %} <!-- END block content -->
 
 {%- block modals -%}
 <div id="modals">
@@ -175,9 +176,11 @@
 
 {%- block popovers -%}
 <div id="popovers">
-{{ content.render_popovers(profile) }}
+{{ neo.render_popovers(profile) }}
 </div>
 {% endblock %}
+
+{% endblock %} <!-- END block content -->
 
 {% block js_header %}
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -186,6 +189,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/webfont/1.5.6/webfont.js"></script>
 <script type="text/javascript">
 {{ g.sijax.get_js()|safe }}
+
 </script>
 {% endblock %}
 
@@ -234,20 +238,6 @@ $(function() {
 						}
 						$(this).toggleClass("clicked");
 				})
-
-				$('#imglinks').affix({
-					offset: {
-						top: 55
-					}
-				});
-
-				var $body   = $(document.body);
-				var navHeight = $('.navbar').outerHeight(true) + 10;
-
-				$body.scrollspy({
-					target: '#imglink_col',
-					offset: navHeight
-				});
 });
 
 $(function() {
