--- a/templates/profiles/neo.html
+++ b/templates/profiles/neo.html
@@ -65,7 +65,7 @@
 						<div id="left-sidebar-tabs">
 								{% if profile.description.tables.keys()|length > 0 %}
 								<div class="col-xs-12">
-										{{ neo.render_description_tabs(profile.description) }}
+										{{ neo.render_description_tabs(profile.description, False) }}
 								</div>
 								{% endif %}
 						</div>
