--- a/templates/profiles/neo_edit.html
+++ b/templates/profiles/neo_edit.html
@@ -119,7 +119,7 @@
 						<div class="col-xs-12 hr fill-low-opacity"></div>
 
 						<div class="col-xs-12" style="text-align:center;">
-						<button id="btn_desc_tbl_add" type="button" class="btn btn-default">
+						<button id="btn_desc_tbl_add" type="button" class="btn btn-dark btn-small">
 								<span class="glyphicon glyphicon-plus" aria=hidden="true"></span>
 								Add New Note
 						</button>
