more style changes

--- a/static/css/neo.css
+++ b/static/css/neo.css
@@ -99,7 +99,7 @@ background-color: inherit; }
 		margin-right: 8px;
 }
 
-.avatar-img {
+.neo-avatar-img {
 		max-width: 125px;
 		max-height: 125px;
 }
