--- a/templates/profiles/_neo.html
+++ b/templates/profiles/_neo.html
@@ -217,8 +217,8 @@ $(function() {
 				</div>
 		</div>
 		<div class="col-md-4 fill-low-opacity">
-				<h3 id="description-title-{{i}}" class="description-title">{{ description.get_keys()[i] }}</h3>
-				<p id="description-body-{{i}}" class="description-body text-editable">{{ description.get_tables()[i].get_text() }}</p>
+				<h3 id="description-title-{{i}}" class="description-title" contenteditable="True">{{ description.get_keys()[i] }}</h3>
+				<p id="description-body-{{i}}" class="description-body text-editable" contenteditable="True">{{ description.get_tables()[i].get_text() }}</p>
 		</div>
 </div>
 {% endfor %}
