--- a/templates/profiles/neo_edit.html
+++ b/templates/profiles/neo_edit.html
@@ -85,10 +85,14 @@
 		<div class="row">
 				<div class="col-md-1 sidebar">
 						<p style="text-align: center">
-						<div class="col-xs-12">
+            <div class="col-xs-12 dropzone avatar-drop" id="avatar-drop">
 								<div id="avatar">
-										<img id="{{AVATAR_IMG}}" class="img-responsive img-circle neo-avatar-img centered" src="{{ profile.header.get_avatar_url() }}">
+								{{ neo.render_avatarimg(profile.header) }}
 								</div>
+                <div class="dz-message">
+                  <span class="glyphicon glyphicon-picture" aria=hidden="true"></span>
+                  <em> Drop file to change Avatar</em>
+                </div>
 						</div>
 
 						<div class="col-xs-12 hr fill-low-opacity"></div>
