--- a/templates/profiles/neo_edit.html
+++ b/templates/profiles/neo_edit.html
@@ -48,36 +48,6 @@
 {% endblock %}
 
 {% block page_header %}
-<div class="collapse" id="collapseExample">
-  <div class="container container-fluid">
-    <div class="jumbotron tool-panel">
-      <div class="row">
-        <div class="col-lg-4">
-            <h3>colors</h3>
-            <input type='text' class="basic" id="{{BKG_COLOR}}"/>
-            <input type='text' class="basic" id="{{COLOR_MAIN}}"/>
-            <input type='text' class="basic" id="{{COLOR_INNER}}"/>
-            <input type='text' class="basic" id="{{COLOR_HEADERS}}"/>
-            <input type='text' class="basic" id="{{COLOR_TEXT}}"/>
-        </div>
-        <div class="col-lg-4">
-          <h3>background</h3>
-          <div class="col-lg-12 bkg-drop dropzone" id="bkg-drop">
-            <div class="dz-message">
-              <span class="glyphicon glyphicon-picture" aria=hidden="true"></span>
-              <em> Drop file to change Background</em>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <h3>fonts</h3>
-          <input id="{{FONT_HEADERS}}" type="text" />
-          <input id="{{FONT_TEXT}}" type="text" />
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 {% endblock %}
 
 {% block content %}
@@ -115,7 +85,7 @@
 						<div id="left-sidebar-tabs">
 								{% if profile.description.tables.keys()|length > 0 %}
 								<div class="col-xs-12">
-										{{ neo.render_description_tabs(profile.description, True) }}
+										{{ neo.render_description_tabs(profile.description) }}
 								</div>
 								{% endif %}
 						</div>
@@ -132,6 +102,32 @@
 				</div>
 				<div class="col-md-10 col-md-offset-1 content">
 						<div class="container" id="container-content">
+
+								<div class="collapse" id="collapseExample">
+									<div class="container container-fluid">
+										<div class="jumbotron tool-panel">
+											<div class="row">
+												<div class="col-lg-4">
+														<h3>colors</h3>
+														<input type='text' class="basic" id="{{COLOR_MAIN}}"/>
+														<input type='text' class="basic" id="{{COLOR_INNER}}"/>
+														<input type='text' class="basic" id="{{COLOR_HEADERS}}"/>
+														<input type='text' class="basic" id="{{COLOR_TEXT}}"/>
+												</div>
+												<div class="col-lg-4">
+													<h3>background</h3>
+													<input type='text' class="basic" id="{{BKG_COLOR}}"/>
+												</div>
+												<div class="col-lg-4">
+													<h3>fonts</h3>
+													<input id="{{FONT_HEADERS}}" type="text" />
+													<input id="{{FONT_TEXT}}" type="text" />
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+
 								<div class="row">
 										<div class="col-xs-12" id="header">
 												<h1 id="{{HEADER_TITLE}}" class="text-editable" contenteditable="True">{{ profile.header.title }}</h1>
