--- a/static/css/neo.css
+++ b/static/css/neo.css
@@ -100,14 +100,20 @@ background-color: inherit; }
 }
 
 .neo-avatar-img {
-		/* max-width: 125px; */
-		/* max-height: 125px; */
+		width: 100%;
+		height: 100%;
+}
+
+#avatar {
+		width: 128px;
+		height: 128px;
 }
 
 #header {
-		padding: 0px;
 		padding-top: 0px;
 		padding-bottom: 30px;
+		border-radius: 10px;
+		background-color: rgba(0,0,0,0.25);
 }
 
 #description-panels {
@@ -145,7 +151,8 @@ background-color: inherit; }
 }
 
 .clicked {
-		background-color: red;
+		background-color: #c9302c;
+		border-color: #d43f3a;
 }
 
 #container-content {
@@ -182,9 +189,6 @@ background-color: inherit; }
 .affix-top {
 }
 
-.imglink-img {
-  width: 40px;
-}
 .popover-content {
   width: 256px;
 }
@@ -246,3 +250,25 @@ background-color: inherit; }
   padding: 0px;
   margin: 0px;
 }
+
+#btn_sidebar_add_link {
+		width: 100%;
+		margin: 0px;
+}
+
+.imglink-container {
+		padding: 0px;
+}
+
+.sidebar .btn-imglink {
+		width: 100%;
+		height: 100%;
+		padding: 0px;
+		margin: 0px;
+		box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0.5), 0px 0px 0px 0px rgba(0, 0, 0, 0.5)
+}
+
+.sidebar img {
+		box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0.5), 0px 0px 0px 0px rgba(0, 0, 0, 0.5)
+}
+
