--- a/templates/profiles/_neo.html
+++ b/templates/profiles/_neo.html
@@ -64,7 +64,7 @@ button > a  { color :  {{profile.colors[COLOR_HEADERS]}}; }
 {% endmacro %}
 
 {% macro render_avatarimg(header) %}
-<img id="{{AVATAR_IMG}}" class="img-responsive img-circle neo-avatar-img centered" src="{{ header.get_avatar_url() }}">
+<img id="{{AVATAR_IMG}}" class="img-responsive img-circle neo-avatar-img" src="{{ header.get_avatar_url() }}">
 {% endmacro %}
 
 {% macro render_links_gallery(gallery) %}
@@ -86,27 +86,36 @@ button > a  { color :  {{profile.colors[COLOR_HEADERS]}}; }
 {% endmacro %}
 
 {% macro imglink(link, number) %}
+<!-- <button type="button" id="imglink_{{number}}" class="btn btn-xs btn-danger -->
+		<!-- btn-editable-imglink" data-toggle="popover" data-placement="right"> -->
 <button type="button" id="imglink_{{number}}" class="btn btn-xs btn-danger
-		btn-editable-imglink" data-toggle="popover" data-placement="left">
-		<div class="dropzone imglink-drop" id="imglink-drop-{{number}}">
-				<p style="text-align: center">
-		<img class="centered imglink-img" src="{{ link.get_image_url() }}">
-				</p>
-		</div>
+		btn-editable-imglink" data-toggle="modal" data-target="#imglink_modal_{{number}}">
+		<!-- <div class="dropzone imglink-drop" id="imglink-drop-{{number}}"> -->
+				<img class="centered imglink-img img-responsive" src="{{ link.get_image_url() }}">
+		<!-- </div> -->
 </button>
 {% endmacro %}
 
 {% macro render_editable_imglinks(img_links) %}
-<ul class="nav nav-stacked" id="imglinks">
-		{% for i in range(0, img_links|length) %}
-		<div class="col-xs-12 hr fill-low-opacity"></div>
-		<div class="col-xs-12">
-				<li>
-					{{ imglink(img_links[i], i) }}
-				</li>
+{% for i in range(0, img_links|length, 3) %}
+		<div class="col-xs-12 centered">
+				<div class="col-xs-4 imglink-container">
+						{% if i < img_links|length %}
+								{{ imglink(img_links[i], i) }}
+						{% endif %}
+				</div>
+				<div class="col-xs-4 imglink-container">
+						{% if i+1 < img_links|length %}
+								{{ imglink(img_links[i+1], i+1) }}
+						{% endif %}
+				</div>
+				<div class="col-xs-4 imglink-container">
+						{% if i+2 < img_links|length %}
+								{{ imglink(img_links[i+2], i+2) }}
+						{% endif %}
+				</div>
 		</div>
-		{% endfor %}
-</ul>
+{% endfor %}
 {% endmacro %}
 
 {% macro render_popovers(profile) %}
@@ -149,7 +158,7 @@ $(function() {
         },
         title: function() {
             return $("#imglink-popover-title-{{i}}").html();
-        }
+        },
     });
 
     var myDropzone = new Dropzone('#imglink-drop-{{i}}', {
@@ -182,6 +191,87 @@ $(function() {
 
 });
 </script>
+{% endfor %}
+{% endmacro %}
+
+{% macro render_modals(profile) %}
+{% for i in range(0, profile.sidebar.img_links|length) %}
+		<div id="imglink_modal_{{i}}" class="modal fade" role="dialog">
+			<div class="modal-dialog">
+				<div class="modal-content">
+
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal">&times;</button>
+						<h4 class="modal-title">Modal Header</h4>
+					</div>
+
+					<div class="modal-body">
+							<em>To Change Button Icon:</em></br></br>
+							<p> drag and drop file onto picture <span class="glyphicon glyphicon-arrow-right" aria=hidden="true"></span> </p>
+							<div class="dropzone imglink-drop" id="imglink-drop-{{i}}">
+									<img class="centered imglink-img img-responsive" src="{{ profile.sidebar.img_links[i].get_image_url() }}">
+							</div>
+							<div class="col-xs-12 fill hr"></div>
+							<em>To Change Button URL:</em>
+							<div class="input-group">
+									<span class="input-group-addon">URL</span>
+											<input type="text" id="input-imglink-href-{{i}}"
+											class="form-control" placeholder="{%if
+													profile.sidebar.img_links[i].link_url %}{{ profile.sidebar.img_links[i].link_url }}{% else %}enter url here (optional){% endif %}">
+									</span>
+							</div>
+					</div>
+
+					<div class="modal-footer">
+							<button id="btn_imglink_submit_{{i}}" class="btn btn-default
+									btn-imglink-submit" type="button"
+									data-dismiss="modal"
+									onclick="Sijax.request('update_imglink', [{
+											'num': {{i}},
+											'href': $('#input-imglink-href-{{i}}').val()
+											}]);">submit
+							</button>
+							<button id="btn-imglink-delete-{{i}}" class="btn btn-danger btn-imglink-delete" type="button" 
+											data-dismiss="modal"
+											onclick="Sijax.request('del_imglink', [{ 'num': {{i}} }]);">delete
+							</button>
+					</div>
+				</div>
+
+			</div>
+		</div>
+
+		<script type="text/javascript">
+		$(function() {
+				var myDropzone = new Dropzone('#imglink-drop-{{i}}', {
+						url: "/upload/",
+						method: "POST",
+						paramName: "file",
+						uploadMultiple: false,
+						addRemoveLinks: false,
+						createImageThumbnails: false,
+						maxThumbnailFilesize: 2,
+						maxFiles: 1,
+						acceptedFiles: "image/png, image/jpeg, image/gif",
+						autoProcessQueue: true,
+						forceFallback: false,
+						clickable: true,
+						dictDefaultMessage: '',
+				});
+
+				myDropzone.on("success", function(file, response) {
+						Sijax.request('update_imglink_image', [{
+								'num' : {{i}},
+								'files': response['files']
+						}]);
+				});
+
+				myDropzone.on("complete", function(file) {
+						myDropzone.removeAllFiles();
+				});
+
+		});
+		</script>
 {% endfor %}
 {% endmacro %}
 
