--- a/templates/profiles/neo.html
+++ b/templates/profiles/neo.html
@@ -45,20 +45,37 @@
 				<div class="col-md-1 sidebar">
 						<p style="text-align: center">
 						<div class="col-xs-12">
-								<div id="avatar">
-										<img id="{{AVATAR_IMG}}" class="img-responsive img-circle neo-avatar-img centered" src="{{ profile.header.get_avatar_url() }}">
+								<div id="avatar" class="centered">
+								{{ neo.render_avatarimg(profile.header) }}
 								</div>
 						</div>
 
-						{% if is_me %}
 						<div class="col-xs-12 hr fill-low-opacity"></div>
-						<div class="col-xs-12">
-								<a class="btn btn-dark btn-lg btn-sidebar" type="button" href="{{ url_for('profiles.edit', slug=profile.username) }}">
-										<span class="glyphicon glyphicon-edit" aria=hidden="true"></span>
-										Edit Profile
-								</a>
+						{% for i in range(0, profile.sidebar.img_links|length, 3) %}
+						<div class="col-xs-12 centered">
+								<div class="col-xs-4 imglink-container">
+										{% if i < profile.sidebar.img_links|length %}
+												<a type="button" class="btn btn-imglink" href="{{ profile.sidebar.img_links[i].link_url }}">
+														<img class="centered imglink-img img-responsive" src="{{ profile.sidebar.img_links[i].get_image_url() }}">
+												</a>
+										{% endif %}
+								</div>
+								<div class="col-xs-4 imglink-container">
+										{% if i+1 < profile.sidebar.img_links|length %}
+												<a type="button" class="btn btn-imglink" href="{{ profile.sidebar.img_links[i+1].link_url }}">
+														<img class="centered imglink-img img-responsive" src="{{ profile.sidebar.img_links[i+1].get_image_url() }}">
+												</a>
+										{% endif %}
+								</div>
+								<div class="col-xs-4 imglink-container">
+										{% if i+2 < profile.sidebar.img_links|length %}
+												<a type="button" class="btn btn-imglink" href="{{ profile.sidebar.img_links[i+2].link_url }}">
+														<img class="centered imglink-img img-responsive" src="{{ profile.sidebar.img_links[i+2].get_image_url() }}">
+												</a>
+										{% endif %}
+								</div>
 						</div>
-						{% endif %}
+						{% endfor %}
 
 						<div class="col-xs-12 hr fill-low-opacity"></div>
 
@@ -72,18 +89,26 @@
 
 						</p>
 				</div>
-				{% if profile.sidebar.img_links|length > 0 %}
-				<div class="col-md-10 col-md-offset-1 content">
-				{% else %}
+
 				<div class="col-md-11 col-md-offset-1 content">
-				{% endif %}
 						<div class="container" id="container-content">
+								{% if is_me %}
+								<div class="col-xs-12">
+										<a class="btn btn-dark btn-lg btn-sidebar pull-right" type="button" href="{{ url_for('profiles.edit', slug=profile.username) }}">
+												<span class="glyphicon glyphicon-edit" aria=hidden="true"></span>
+												Edit Profile
+										</a>
+								</div>
+								<div class="col-xs-12 hr fill-low-opacity"></div>
+								{% endif %}
+
 								<div class="row">
-										<div class="col-xs-12" id="header">
+										<div class="col-xs-12 fill-mid-opacity" id="header">
 												<h1 id="{{HEADER_TITLE}}" class="text-editable">{{ profile.header.title }}</h1>
 												<h4 id="{{HEADER_BODY}}" class="text-editable">{{ profile.header.body }}</h4>
 										</div>
 								</div>
+
 								<div class="row">
 										{% for i in range(0, profile.description.tables.keys()|length) %}
 										<div id="description-{{i}}" class="description-panel {% if i != 0 %}hidden{% endif %}">
@@ -113,22 +138,6 @@
 								</div>
 						</div> <!-- END container -->
 				</div> <!-- END col-xs-11 -->
-				{% if profile.sidebar.img_links|length > 0 %}
-				<div class="col-xs-1" id="imglink_col">
-						<ul class="nav nav-stacked" id="imglinks">
-								{% for i in range(0, profile.sidebar.img_links|length) %}
-								<div class="col-xs-12 hr fill-low-opacity"></div>
-								<div class="col-xs-12">
-										<li>
-												<a href="{{ profile.sidebar.img_links[i].link_url }}">
-														<img class="centered imglink-img" src="{{ profile.sidebar.img_links[i].get_image_url() }}">
-												</a>
-										</li>
-								</div>
-								{% endfor %}
-						</ul>
-				</div>
-				{% endif %}
 		</div> <!-- END row -->
 </div> <!-- END container -->
 
@@ -212,19 +221,19 @@ $(function() {
 						$(this).toggleClass("clicked");
 				})
 
-				$('#imglinks').affix({
-					offset: {
-						top: 55
-					}
-				});
+				//$('#imglinks').affix({
+				//	offset: {
+				//		top: 55
+				//	}
+				//});
 
-				var $body   = $(document.body);
-				var navHeight = $('.navbar').outerHeight(true) + 10;
+				//var $body   = $(document.body);
+				//var navHeight = $('.navbar').outerHeight(true) + 10;
 
-				$body.scrollspy({
-					target: '#imglink_col',
-					offset: navHeight
-				});
+				//$body.scrollspy({
+				//	target: '#imglink_col',
+				//	offset: navHeight
+				//});
 });
 </script>
 {% endblock %}
