--- a/static/css/neo.css
+++ b/static/css/neo.css
@@ -182,6 +182,14 @@ background-color: inherit; }
 		margin: 10px 0px 10px 0px;
 }
 
+.imglink-drop {
+		height: 128px;
+}
+
+.modal-body .imglink-img {
+		height: 256px;
+}
+
 .affix {
 		margin-right: 40px;
 }
@@ -258,6 +266,15 @@ background-color: inherit; }
 
 .imglink-container {
 		padding: 0px;
+		height: 32px;
+}
+
+.btn-imglink .imglink-img {
+		width: 100%;
+}
+
+.btn-editable-imglink {
+		height: 100%;
 }
 
 .sidebar .btn-imglink {
