--- a/templates/profiles/neo_edit.html
+++ b/templates/profiles/neo_edit.html
@@ -71,7 +71,7 @@
 						{{ neo.render_editable_imglinks(profile.sidebar.img_links)}}
 						</div>
 						<div class="col-xs-12 centered">
-								<button id="btn_sidebar_add_link" class="btn btn-default">
+								<button id="btn_sidebar_add_link" class="btn btn-dark">
 										<span class="glyphicon glyphicon-plus" aria=hidden="true"></span>
 								</button>
 						</div>
