--- a/templates/profiles/_neo.html
+++ b/templates/profiles/_neo.html
@@ -77,7 +77,7 @@ button > a  { color :  {{profile.colors[COLOR_HEADERS]}}; }
 
 {% macro render_gallery(gallery) %}
 		{% for i in range(0, gallery.get_tables()|length) %}
-		<a class="gallery-nav" href="#gallery-tab-{{i}}" data-toggle="tab">{{ gallery.get_table_names()[i] }}</a>
+		<a class="gallery-nav" data-toggle="tab">{{ gallery.get_table_names()[i] }}</a>
 		<div class="row gallery-links posts">
 				{{ render_links_gallery(gallery.get_tables()[i]) }}
 		</div>
@@ -206,10 +206,10 @@ $(function() {
 					</div>
 
 					<div class="modal-body">
-							<em>To Change Button Icon:</em></br></br>
-							<img class="centered imglink-img img-responsive" src="{{ profile.sidebar.img_links[i].get_image_url() }}">
-							<div class="dropzone imglink-drop" id="imglink-drop-{{i}}"> </div>
-							<div class="col-xs-12 fill hr"></div>
+							<!-- <em>To Change Button Icon:</em></br></br> -->
+							<!-- <img class="centered imglink-img img-responsive" src="{{ profile.sidebar.img_links[i].get_image_url() }}"> -->
+							<!-- <div class="dropzone imglink-drop" id="imglink-drop-{{i}}"> </div> -->
+							<!-- <div class="col-xs-12 fill hr"></div> -->
 							<em>To Change Button URL:</em>
 							<div class="input-group">
 									<span class="input-group-addon">URL</span>
@@ -274,12 +274,17 @@ $(function() {
 {% endmacro %}
 
 {% macro render_description_tabs(description, editable) %}
+<ul class="list-group">
 {% for i in range(0, description.tables.keys()|length) %}
-<a class="btn btn-dark btn-lg panel-heading {% if i == 0 %}clicked{% endif %}" type="button" id="heading-{{i}}">
-		<h4>{{ description.get_keys()[i] }}
-		</h4>
+<!-- <a class="btn btn-dark btn-lg panel-heading {% if i == 0 %}clicked{% endif %}" type="button" id="heading-{{i}}"> -->
+<li class="list-group-item">
+<a class="note-tab {% if i == 0 %}clicked{% endif %}" id="heading-{{i}}">
+		<span class="glyphicon glyphicon-play" aria=hidden="true"></span>
+		{{ description.get_keys()[i] }}
 </a>
+</li>
 {% endfor %}
+</ul>
 {% endmacro %}
 
 {% macro render_description_content(description) %}
