--- a/templates/profiles/neo.html
+++ b/templates/profiles/neo.html
@@ -80,11 +80,25 @@
 						<div class="col-xs-12 hr fill-low-opacity"></div>
 
 						<div id="left-sidebar-tabs">
-								{% if profile.description.tables.keys()|length > 0 %}
 								<div class="col-xs-12">
+										<h4>Notes</h4>
 										{{ neo.render_description_tabs(profile.description) }}
 								</div>
-								{% endif %}
+								<div class="col-xs-12">
+										<h4>Galleries</h4>
+
+										<ul class="list-group">
+										{% for name in profile.get_gallery_names() %}
+												<li class="list-group-item">
+														<a href="#gallery-{{loop.index}}">
+														<span class="glyphicon glyphicon-picture" aria=hidden="true"></span>
+														{{ name }}
+														</a>
+												</li>
+												{% endfor %}
+										</ul>
+
+								</div>
 						</div>
 
 						</p>
@@ -132,7 +146,9 @@
 								<div class="row">
 										<div class="col-xs-12">
 												{% for gallery in profile.get_galleries() %}
+														<div id="gallery-{{loop.index}}">
 														{{ neo.render_gallery(gallery) }}
+														</div>
 												{% endfor %}
 										</div>
 								</div>
@@ -202,7 +218,7 @@ families: [
 
 <script>
 $(function() {
-				$('.panel-heading').on('click', function() {
+				$('.note-tab').on('click', function() {
 						var toks = $(this).attr('id').split('-');
 						var id = parseInt(toks[toks.length-1]);
 
@@ -214,7 +230,7 @@ $(function() {
 						$(panels[id]).removeClass('hidden');
 						$(panels[id]).addClass('active');
 
-						var buttons = $('.panel-heading');
+						var buttons = $('.note-tab');
 						for (var idx = 0; idx < buttons.length; idx++) {
 							$(buttons[idx]).removeClass('clicked');
 						}
