--- a/static/css/neo.css
+++ b/static/css/neo.css
@@ -299,3 +299,15 @@ background-color: inherit; }
 		box-shadow: inset 0px 0px 0px 0px rgba(0, 0, 0, 0.5), 0px 0px 0px 0px rgba(0, 0, 0, 0.5)
 }
 
+
+#left-sidebar-tabs {
+	padding-left: 10px;
+	overflow: ellipsis;
+}
+
+.truncate {
+  white-space: nowrap;
+	width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
