--- a/templates/profiles/neo_edit.html
+++ b/templates/profiles/neo_edit.html
@@ -70,30 +70,47 @@
 						<div id="imglink-container">
 						{{ neo.render_editable_imglinks(profile.sidebar.img_links)}}
 						</div>
+            {% if profile.sidebar.img_links|length < 3 %}
 						<div class="col-xs-12 centered">
 								<button id="btn_sidebar_add_link" class="btn btn-dark">
 										<span class="glyphicon glyphicon-plus" aria=hidden="true"></span>
 								</button>
 						</div>
+            {% endif %}
+
 
 						<div class="col-xs-12 hr fill-low-opacity"></div>
 
 						<div id="left-sidebar-tabs">
-								{% if profile.description.tables.keys()|length > 0 %}
 								<div class="col-xs-12">
+										<h4>Notes</h4>
+                    <div id="left-sidebar-desc">
 										{{ neo.render_description_tabs(profile.description) }}
+                    </div>
+                    <div class="col-xs-12" style="text-align:center;">
+                    <button id="btn_desc_tbl_add" type="button" class="btn btn-dark btn-small">
+                        <span class="glyphicon glyphicon-plus" aria=hidden="true"></span>
+                        Add New Note
+                    </button>
+                    </div>
 								</div>
-								{% endif %}
+								<div class="col-xs-12">
+										<h4>Galleries</h4>
+
+										<ul class="list-group">
+										{% for name in profile.get_gallery_names() %}
+												<li class="list-group-item">
+														<a href="#gallery-{{loop.index}}">
+														<span class="glyphicon glyphicon-picture" aria=hidden="true"></span>
+														{{ name }}
+														</a>
+												</li>
+												{% endfor %}
+										</ul>
+
+								</div>
 						</div>
 
-						<div class="col-xs-12 hr fill-low-opacity"></div>
-
-						<div class="col-xs-12" style="text-align:center;">
-						<button id="btn_desc_tbl_add" type="button" class="btn btn-dark btn-small">
-								<span class="glyphicon glyphicon-plus" aria=hidden="true"></span>
-								Add New Note
-						</button>
-						</div>
 						</p>
 				</div>
 
@@ -155,7 +172,9 @@
 								<div class="row">
 										<div class="col-xs-12">
 												{% for gallery in profile.get_galleries() %}
+														<div id="gallery-{{loop.index}}">
 														{{ neo.render_gallery(gallery) }}
+														</div>
 												{% endfor %}
 										</div>
 								</div>
