--- a/templates/profiles/_neo.html
+++ b/templates/profiles/_neo.html
@@ -54,6 +54,9 @@ button > a  { color :  {{profile.colors[COLOR_HEADERS]}}; }
 #maincontainer, #sidebar_container {
   background-color :  {{profile.colors[COLOR_MAIN]}};
 }
+a {
+  color :  {{profile.colors[COLOR_MAIN]}};
+}
 #inner_container {
   background-color :  transparent;
 }
