--- a/templates/profiles/neo_edit.html
+++ b/templates/profiles/neo_edit.html
@@ -95,7 +95,8 @@
 
 								<div class="col-xs-12">
                     <h4>Galleries
-                    <span id="btn_sidebar_add_gallery" class="btn badge">?</span>
+                    <span id="btn_sidebar_add_gallery" class="btn badge"
+                        data-toggle="modal" data-target="#gallery_help_modal">?</span>
                     </h4>
 
 										<ul class="list-group">
@@ -181,6 +182,31 @@
 
 {%- block modals -%}
 <div id="modals">
+    <div id="gallery_help_modal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">HELP: Adding a New Gallery</h4>
+                </div>
+
+                <div class="modal-body">
+                    <h5> Create a new gallery by following these steps</h5>
+                    <ul class="list-group">
+                        <li class="list-group-item">1. go to you Dropbox</li>
+                        <li class="list-group-item">2. open the directory: "Apps -> refurence -> refurence_{{profile.username}}" </li>
+                        <li class="list-group-item">3. create a new directory</li>
+                        <li class="list-group-item">4. add some images to this directory</li>
+                        <li class="list-group-item">5. reload the page in your browser; you will see the new gallery with the images you added</li>
+                        <li class="list-group-item">* you can add images to this directory whenever you want and it will update on the website; TRY IT</li>
+                    </ul>
+                </div>
+
+                <div class="modal-footer">
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
 
